// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates new config when no .babelrc found 1`] = `
Object {
  "plugins": Array [
    "<<REPLACED>>/src/utils/fixRequireIssues.js",
    "<<NODE_MODULE>>/react-hot-loader/babel.js",
    "<<REPLACED>>/src/hot/babelPlugin.js",
  ],
  "presets": Array [
    "<<NODE_MODULE>>/metro-react-native-babel-preset/src/index.js",
  ],
}
`;

exports[`does not include "hot" plugins in production 1`] = `
Object {
  "plugins": Array [
    "<<REPLACED>>/src/utils/fixRequireIssues.js",
  ],
  "presets": Array [
    "<<NODE_MODULE>>/metro-react-native-babel-preset/src/index.js",
  ],
}
`;
